package com.youkeda.application.art.article.model;

/**
 * @Author jiaoheng
 * @DATE 2020-03-20
 */
public enum ArticleCategoryDefine {
    政策专区,
    下载专区
}
