package com.youkeda.application.art.article.model;

/**
 * @Author
 * @DATE 2020-03-16
 */
public enum OrderByType {
    // 阅读数
    READ,
    // 点赞数
    LIKE
}
